examples/pos/imports.effekt
module imports

import examples/pos/lists

def main() = {
  val l: lists::List[Int] = Cons(1, Cons(2, Nil()));
  foreach(l) { el => println(el) };
  ()
}